contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/attributes.cpp
int (__attribute__((stdcall)) *mycoolfunction)();
int main(int __attribute__((const))argc, char** argv) __attribute__((noreturn)) {
    int var __attribute__((aligned));
    while (alwaysTrue);
}
